fix: New Indonesian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/id_ID/translation.json
+++ b/shared/i18n/locales/id_ID/translation.json
@@ -386,6 +386,8 @@
   "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "{{ minutes }}m read",
   "Revision deleted": "Revision deleted",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "Current version",
   "{{userName}} edited": "{{userName}} menyunting",
   "Revision options": "Opsi revisi",
@@ -709,6 +711,12 @@
   "Add a description": "Tambahkan keterangan",
   "Signing in": "Sedang masuk",
   "You can safely close this window once the Outline desktop app has opened": "Anda dapat menutup jendela ini dengan aman setelah aplikasi desktop Outline dibuka",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "Terjadi kesalahan saat membuat komentar",
   "Add a comment": "Tambahkan komentar",
   "Add a reply": "Tambahkan balasan",
@@ -756,6 +764,7 @@
   "Archived": "Diarsipkan",
   "Save draft": "Save draft",
   "Restore version": "Pulihkan versi",
+  "Highlight changes": "Highlight changes",
   "No history yet": "Belum ada riwayat",
   "Source": "Source",
   "Created": "Dibuat",
