fix: New Persian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -386,6 +386,8 @@
   "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "{{ minutes }} دقیقه مطالعه",
   "Revision deleted": "نسخه حذف شد",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "نسخه فعلی",
   "{{userName}} edited": "{{userName}} ویرایش شد",
   "Revision options": "گزینه‌های بازنگری‌ها",
@@ -709,6 +711,12 @@
   "Add a description": "توضیحاتی اضافه کنید",
   "Signing in": "در حال ورود",
   "You can safely close this window once the Outline desktop app has opened": "پس از باز شدن برنامه دسکتاپ Outline می‌توانید این پنجره را با اطمینان ببندید",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "خطا در ایجاد نظر",
   "Add a comment": "افزودن نظر",
   "Add a reply": "افزودن پاسخ",
@@ -756,6 +764,7 @@
   "Archived": "بایگانی شده",
   "Save draft": "ذخیره پیش‌نویس",
   "Restore version": "بازیابی نسخه",
+  "Highlight changes": "Highlight changes",
   "No history yet": "هیچ سابقه‌ای وجود ندارد",
   "Source": "منبع",
   "Created": "ایجاد شده",
