fix: New Norwegian Bokmal translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -386,6 +386,8 @@
   "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "{{ minutes }} min. lesetid",
   "Revision deleted": "Revisjon slettet",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "Nåværende versjon",
   "{{userName}} edited": "{{userName}} redigerte",
   "Revision options": "Revisjonsalternativer",
@@ -709,6 +711,12 @@
   "Add a description": "Legg til en beskrivelse",
   "Signing in": "Logger inn",
   "You can safely close this window once the Outline desktop app has opened": "Du kan trygt lukke dette vinduet når Outline-skrivebordsappen har åpnet",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "Feil ved oppretting av kommentar",
   "Add a comment": "Legg til en kommentar",
   "Add a reply": "Legg til et svar",
@@ -756,6 +764,7 @@
   "Archived": "Arkivert",
   "Save draft": "Lagre utkast",
   "Restore version": "Gjenopprett versjon",
+  "Highlight changes": "Highlight changes",
   "No history yet": "Ingen historikk ennå",
   "Source": "Kilde",
   "Created": "Opprettet",
