fix: New Dutch translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -386,8 +386,8 @@
   "{{ hours }}h read": "{{ hours }}u gelezen",
   "{{ minutes }}m read": "{{ minutes }}m gelezen",
   "Revision deleted": "Revisie verwijderd",
-  "{{count}} people": "{{count}} person",
-  "{{count}} people_plural": "{{count}} people",
+  "{{count}} people": "{{count}} persoon",
+  "{{count}} people_plural": "{{count}} personen",
   "Current version": "Huidige versie",
   "{{userName}} edited": "{{userName}} bewerkte",
   "Revision options": "Revisie opties",
@@ -476,7 +476,7 @@
   "Change permissions?": "Machtigingen wijzigen?",
   "{{ documentName }} cannot be moved within {{ parentDocumentName }}": "{{ documentName }} kan niet verplaatst worden binnen {{ parentDocumentName }}",
   "You can't reorder documents in an alphabetically sorted collection": "Je kunt documenten in een alfabetisch gesorteerde collectie niet opnieuw ordenen",
-  "{{ documentName }} cannot be moved here": "{{ documentName }} cannot be moved here",
+  "{{ documentName }} cannot be moved here": "{{ documentName }} kan niet hier naartoe worden verplaatst",
   "Return to App": "Terug naar de app",
   "Installation": "Installatie",
   "Unstar document": "Document verwijderen uit favorieten",
@@ -619,7 +619,7 @@
   "Account": "Account",
   "API & Apps": "API & apps",
   "Details": "Details",
-  "Authentication": "Authentication",
+  "Authentication": "Authenticatie",
   "Security": "Beveiliging",
   "Features": "Features",
   "Members": "Deelnemers",
@@ -711,12 +711,12 @@
   "Add a description": "Beschrijving toevoegen",
   "Signing in": "Inloggen",
   "You can safely close this window once the Outline desktop app has opened": "Je kunt dit venster veilig sluiten zodra de Outline desktop app is geopend",
-  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
-  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
-  "{{ count }} changes": "{{ count }} change",
-  "{{ count }} changes_plural": "{{ count }} changes",
-  "Previous change": "Previous change",
-  "Next change": "Next change",
+  "{{ current }} of {{ count }} changes": "{{ current }} van {{ count }} wijzigingen",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} van {{ count }} wijzigingen",
+  "{{ count }} changes": "{{ count }} wijziging",
+  "{{ count }} changes_plural": "{{ count }} wijzigingen",
+  "Previous change": "Vorige wijziging",
+  "Next change": "Volgende wijziging",
   "Error creating comment": "Fout bij maken reactie",
   "Add a comment": "Voeg een opmerking toe",
   "Add a reply": "Reactie toevoegen",
@@ -764,7 +764,7 @@
   "Archived": "Gearchiveerd",
   "Save draft": "Bewaar concept",
   "Restore version": "Versie herstellen",
-  "Highlight changes": "Highlight changes",
+  "Highlight changes": "Wijzigingen markeren",
   "No history yet": "Nog geen geschiedenis",
   "Source": "Bron",
   "Created": "Aangemaakt",
@@ -1015,18 +1015,18 @@
   "Where users are redirected to authorize this app": "Waar gebruikers worden omgeleid om deze app te autoriseren",
   "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "Met applicaties kunt je interne of openbare integraties bouwen met Outline en veilige toegang via OAuth bieden. Zie de <em>documentatie</em> voor meer details.",
   "Settings saved": "Instellingen opgeslagen",
-  "Are you sure?": "Are you sure?",
-  "Removing": "Removing",
-  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.",
-  "Manage how members sign-in to your workspace and which authentication providers are enabled.": "Manage how members sign-in to your workspace and which authentication providers are enabled.",
+  "Are you sure?": "Weet je het zeker?",
+  "Removing": "Verwijderen",
+  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "Het verwijderen van deze verificatieprovider voorkomt dat leden zich met {{ authProvider }} kunnen aanmelden.",
+  "Manage how members sign-in to your workspace and which authentication providers are enabled.": "Beheer hoe leden die zich aanmelden voor jouw werkruimte en welke verificatieproviders ingeschakeld zijn.",
   "Allow members to sign-in with {{ authProvider }}": "Sta leden toe om in te loggen met {{ authProvider }}",
-  "Connect {{ authProvider }} to allow members to sign-in": "Connect {{ authProvider }} to allow members to sign-in",
+  "Connect {{ authProvider }} to allow members to sign-in": "Verbinden met {{ authProvider }} om leden toe te staan in te loggen",
   "Connected": "Verbonden",
   "Disabled": "Uitgeschakeld",
   "Connect": "Verbinden",
   "Allow members to sign-in using their email address": "Sta leden toe om in te loggen met hun e-mailadres",
   "The server must have SMTP configured to enable this setting": "De server moet SMTP hebben geconfigureerd om deze instelling in te schakelen",
-  "Restrictions": "Restrictions",
+  "Restrictions": "Beperkingen",
   "by {{ name }}": "door {{ name }}",
   "Last used": "Laatst gebruikt",
   "No expiry": "Geen vervaldatum",
@@ -1229,7 +1229,7 @@
   "Are you sure you want to require invites?": "Weet je zeker dat je deze uitnodiging wilt verwijderen?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "Nieuwe gebruikers moeten eerst worden uitgenodigd om een account aan te maken. <em>Standaard rol</em> en <em>Toegestane domeinen</em> zullen niet langer van toepassing zijn.",
   "Settings that impact the access, security, and content of your workspace.": "Instellingen die van invloed zijn op de toegang, beveiliging en inhoud van je werkruimte.",
-  "Invites": "Invites",
+  "Invites": "Uitnodigingen",
   "Allow users to send invites": "Gebruikers toestaan uitnodigingen te sturen",
   "Allow editors to invite other people to the workspace": "Redacteurs toestaan om andere personen uit te nodigen voor de werkruimte",
   "Require invites": "Uitnodigingen vereisen",
