fix: New Spanish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -367,7 +367,7 @@
   "Public": "Public",
   "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
   "Icon": "Ícono",
-  "OAuth client icon": "OAuth client icon",
+  "OAuth client icon": "Icono del cliente OAuth",
   "My App": "Mi aplicación",
   "Tagline": "Lema",
   "A short description": "Una breve descripción",
