fix: New Swedish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -14,7 +14,7 @@
   "Share this collection": "Dela denna samling",
   "Import document": "Importera dokument",
   "Sort in sidebar": "Sortera i sidofältet",
-  "A-Z sort": "A-Z sort",
+  "A-Z sort": "Sortera A-Ö",
   "Z-A sort": "Sortera Ö-A",
   "Manual sort": "Manuell sortering",
   "Search in collection": "Sök i samling",
@@ -113,8 +113,8 @@
   "You have left the shared document": "Du har lämnat det delade dokumentet",
   "Could not leave document": "Kunde inte lämna dokument",
   "Apply template": "Använd mall",
-  "New emoji": "New emoji",
-  "Upload emoji": "Upload emoji",
+  "New emoji": "Ny emoji",
+  "Upload emoji": "Ladda upp emoji",
   "Disconnect": "Koppla från",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "Hem",
@@ -138,8 +138,8 @@
   "Log out": "Logga ut",
   "Mark notifications as read": "Markera alla aviseringar som lästa",
   "Archive all notifications": "Arkivera alla aviseringar",
-  "Mark as read": "Mark as read",
-  "Mark as unread": "Mark as unread",
+  "Mark as read": "Markera som läst",
+  "Mark as unread": "Markera som oläst",
   "New App": "Ny App",
   "New Application": "Ny applikation",
   "This version of the document was deleted": "Denna version av dokumentet har tagits bort",
@@ -264,9 +264,9 @@
   "Please select an image file": "Please select an image file",
   "Emoji created successfully": "Emoji created successfully",
   "Uploading": "Laddar upp",
-  "Add emoji": "Add emoji",
+  "Add emoji": "Lägg till emoji",
   "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
-  "Upload an image": "Upload an image",
+  "Upload an image": "Ladda upp en bild",
   "Click or drag to replace": "Click or drag to replace",
   "Drop the image here": "Drop the image here",
   "Click, drop, or paste an image here": "Click, drop, or paste an image here",
