fix: New French translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -144,6 +144,7 @@
   "New Application": "Nouvelle application",
   "This version of the document was deleted": "Cette version du document a été supprimée",
   "Link copied": "Lien copié",
+  "Download revision": "Download revision",
   "Dark": "Sombre",
   "Light": "Clair",
   "System": "Système",
