fix: New Spanish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -144,6 +144,7 @@
   "New Application": "Nueva solicitud",
   "This version of the document was deleted": "Esta versión del documento ha sido eliminada",
   "Link copied": "Enlace copiado",
+  "Download revision": "Download revision",
   "Dark": "Oscuro",
   "Light": "Claro",
   "System": "Sistema",
