--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -144,6 +144,7 @@
   "New Application": "Nová žádost",
   "This version of the document was deleted": "Tato verze dokumentu byla smazána",
   "Link copied": "Odkaz zkopírován",
+  "Download revision": "Download revision",
   "Dark": "Temný",
   "Light": "Světlý",
   "System": "Systém",
