--- a/shared/i18n/locales/da_DK/translation.json
+++ b/shared/i18n/locales/da_DK/translation.json
@@ -144,6 +144,7 @@
   "New Application": "Ny Applikation",
   "This version of the document was deleted": "Denne version af dokumentet er blevet slettet",
   "Link copied": "Link kopieret",
+  "Download revision": "Download revision",
   "Dark": "Mørk",
   "Light": "Lys",
   "System": "System",
