--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -144,6 +144,7 @@
   "New Application": "Neue Anwendung",
   "This version of the document was deleted": "Diese Version des Dokuments wurde gelöscht",
   "Link copied": "Link wurde kopiert",
+  "Download revision": "Download revision",
   "Dark": "Dunkel",
   "Light": "Hell",
   "System": "System",
