fix: New Hungarian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -144,6 +144,7 @@
   "New Application": "Új alkalmazás",
   "This version of the document was deleted": "A dokumetnum ezen verziója törölve lett",
   "Link copied": "Hivatkozás másolva",
+  "Download revision": "Download revision",
   "Dark": "Sötét",
   "Light": "Világos",
   "System": "Rendszer",
