fix: New Italian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -144,6 +144,7 @@
   "New Application": "Nuova Applicazione",
   "This version of the document was deleted": "Questa versione del documento è stata eliminata",
   "Link copied": "Collegamento copiato",
+  "Download revision": "Download revision",
   "Dark": "Scuro",
   "Light": "Chiaro",
   "System": "Sistema",
