fix: New Japanese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -144,6 +144,7 @@
   "New Application": "New Application",
   "This version of the document was deleted": "This version of the document was deleted",
   "Link copied": "リンクをコピーしました",
+  "Download revision": "Download revision",
   "Dark": "ダークモード",
   "Light": "ライトモード",
   "System": "システム",
