fix: New Korean translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -144,6 +144,7 @@
   "New Application": "새 애플리케이션",
   "This version of the document was deleted": "이 문서의 버전은 삭제됨",
   "Link copied": "링크 복사됨",
+  "Download revision": "Download revision",
   "Dark": "어둡게 보기",
   "Light": "밝게 보기",
   "System": "시스템",
