fix: New Dutch translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -144,6 +144,7 @@
   "New Application": "Nieuwe applicatie",
   "This version of the document was deleted": "Deze versie van het document is verwijderd",
   "Link copied": "Link gekopieerd",
+  "Download revision": "Download revision",
   "Dark": "Donker",
   "Light": "Licht",
   "System": "Systeem",
