fix: New Polish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -144,6 +144,7 @@
   "New Application": "Nowa aplikacja",
   "This version of the document was deleted": "Ta wersja dokumentu została usunięta",
   "Link copied": "Link skopiowany",
+  "Download revision": "Download revision",
   "Dark": "Ciemny",
   "Light": "Jasny",
   "System": "System",
