--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -144,6 +144,7 @@
   "New Application": "New Application",
   "This version of the document was deleted": "This version of the document was deleted",
   "Link copied": "Link copiado",
+  "Download revision": "Download revision",
   "Dark": "Escuro",
   "Light": "Claro",
   "System": "Sistema",
