fix: New Swedish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -144,6 +144,7 @@
   "New Application": "Ny applikation",
   "This version of the document was deleted": "Denna version av dokumentet har tagits bort",
   "Link copied": "Länk kopierad",
+  "Download revision": "Download revision",
   "Dark": "Mörk",
   "Light": "Ljus",
   "System": "System",
