fix: New Turkish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -144,6 +144,7 @@
   "New Application": "Yeni Uygulama",
   "This version of the document was deleted": "Belgenin bu sürümü silindi",
   "Link copied": "Bağlantı kopyalandı",
+  "Download revision": "Download revision",
   "Dark": "Koyu",
   "Light": "Açık",
   "System": "Sistem",
