fix: New Ukrainian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -144,6 +144,7 @@
   "New Application": "Новий застосунок",
   "This version of the document was deleted": "Ця версія документу була видалена",
   "Link copied": "Посилання скопійовано",
+  "Download revision": "Download revision",
   "Dark": "Темна",
   "Light": "Світла",
   "System": "Системна",
