fix: New Chinese Simplified translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -144,6 +144,7 @@
   "New Application": "新应用",
   "This version of the document was deleted": "此版本的文档已被删除",
   "Link copied": "链接已复制",
+  "Download revision": "Download revision",
   "Dark": "深色模式",
   "Light": "浅色模式",
   "System": "跟随系统",
