fix: New Vietnamese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -144,6 +144,7 @@
   "New Application": "Ứng dụng mới",
   "This version of the document was deleted": "Phiên bản của tài liệu đã bị xóa",
   "Link copied": "Đã sao chép Link",
+  "Download revision": "Download revision",
   "Dark": "Dark",
   "Light": "Light",
   "System": "Hệ thống",
