fix: New Portuguese, Brazilian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -144,6 +144,7 @@
   "New Application": "Nova Aplicação",
   "This version of the document was deleted": "Esta versão do documento foi excluída",
   "Link copied": "Link copiado",
+  "Download revision": "Download revision",
   "Dark": "Escuro",
   "Light": "Claro",
   "System": "Sistema",
