--- a/shared/i18n/locales/id_ID/translation.json
+++ b/shared/i18n/locales/id_ID/translation.json
@@ -144,6 +144,7 @@
   "New Application": "New Application",
   "This version of the document was deleted": "This version of the document was deleted",
   "Link copied": "Tautan disalin",
+  "Download revision": "Download revision",
   "Dark": "Gelap",
   "Light": "Cerah",
   "System": "Sistem",
