fix: New Persian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -144,6 +144,7 @@
   "New Application": "برنامه جدید",
   "This version of the document was deleted": "این نسخه از سند حذف شده است",
   "Link copied": "لینک کپی شد",
+  "Download revision": "Download revision",
   "Dark": "تیره",
   "Light": "روشن",
   "System": "سامانه",
