fix: New Thai translations from Crowdin [ci skip]

--- a/shared/i18n/locales/th_TH/translation.json
+++ b/shared/i18n/locales/th_TH/translation.json
@@ -144,6 +144,7 @@
   "New Application": "New Application",
   "This version of the document was deleted": "This version of the document was deleted",
   "Link copied": "คัดลอกลิงก์แล้ว",
+  "Download revision": "Download revision",
   "Dark": "มืด",
   "Light": "สว่าง",
   "System": "ระบบ",
