--- a/shared/i18n/locales/en_GB/translation.json
+++ b/shared/i18n/locales/en_GB/translation.json
@@ -144,6 +144,7 @@
   "New Application": "New Application",
   "This version of the document was deleted": "This version of the document was deleted",
   "Link copied": "Link copied",
+  "Download revision": "Download revision",
   "Dark": "Dark",
   "Light": "Light",
   "System": "System",
