fix: New Norwegian Bokmal translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -144,6 +144,7 @@
   "New Application": "Ny applikasjon",
   "This version of the document was deleted": "Denne versjonen av dokumentet har blitt slettet",
   "Link copied": "Lenke kopiert",
+  "Download revision": "Download revision",
   "Dark": "Mørk",
   "Light": "Lys",
   "System": "System",
