account level connection

--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -1353,13 +1353,14 @@
   "Whoops, you need to accept the permissions in Figma to connect {{appName}} to your workspace. Try again?": "Whoops, you need to accept the permissions in Figma to connect {{appName}} to your workspace. Try again?",
   "Something went wrong while authenticating your request. Please try logging in again.": "Something went wrong while authenticating your request. Please try logging in again.",
   "Something went wrong while processing your request. Please try again.": "Something went wrong while processing your request. Please try again.",
-  "Enable previews of Figma design files in documents by connecting a Figma workspace to {appName}.": "Enable previews of Figma design files in documents by connecting a Figma workspace to {appName}.",
-  "Enabled by {{integrationCreatedBy}}": "Enabled by {{integrationCreatedBy}}",
-  "Disconnecting will prevent previewing Figma design files from this workspace in documents. Are you sure?": "Disconnecting will prevent previewing Figma design files from this workspace in documents. Are you sure?",
+  "Link your {appName} account to Figma to enable previews of design files you have access to, directly within documents.": "Link your {appName} account to Figma to enable previews of design files you have access to, directly within documents.",
+  "Enabled on": "Enabled on",
+  "Disconnecting will prevent previewing Figma design files from this account in documents. Are you sure?": "Disconnecting will prevent previewing Figma design files from this account in documents. Are you sure?",
   "The Figma integration is currently disabled. Please set the associated environment variables and restart the server to enable the integration.": "The Figma integration is currently disabled. Please set the associated environment variables and restart the server to enable the integration.",
   "Whoops, you need to accept the permissions in GitHub to connect {{appName}} to your workspace. Try again?": "Whoops, you need to accept the permissions in GitHub to connect {{appName}} to your workspace. Try again?",
   "The owner of GitHub account has been requested to install the {{githubAppName}} GitHub app. Once approved, previews will be shown for respective links.": "The owner of GitHub account has been requested to install the {{githubAppName}} GitHub app. Once approved, previews will be shown for respective links.",
   "Enable previews of GitHub issues and pull requests in documents by connecting a GitHub organization or specific repositories to {appName}.": "Enable previews of GitHub issues and pull requests in documents by connecting a GitHub organization or specific repositories to {appName}.",
+  "Enabled by {{integrationCreatedBy}}": "Enabled by {{integrationCreatedBy}}",
   "Disconnecting will prevent previewing GitHub links from this organization in documents. Are you sure?": "Disconnecting will prevent previewing GitHub links from this organization in documents. Are you sure?",
   "The GitHub integration is currently disabled. Please set the associated environment variables and restart the server to enable the integration.": "The GitHub integration is currently disabled. Please set the associated environment variables and restart the server to enable the integration.",
   "Google Analytics": "Google Analytics",
