--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -896,6 +896,7 @@
   "Triggers": "Triggers",
   "Mention users and more": "Mention users and more",
   "Insert block": "Insert block",
+  "Continue with Passkey": "Continue with Passkey",
   "Sign In": "Sign In",
   "Continue with Email": "Continue with Email",
   "Continue with {{ authProviderName }}": "Continue with {{ authProviderName }}",
@@ -1027,6 +1028,8 @@
   "Connect": "Connect",
   "Allow members to sign-in using their email address": "Allow members to sign-in using their email address",
   "The server must have SMTP configured to enable this setting": "The server must have SMTP configured to enable this setting",
+  "Passkeys": "Passkeys",
+  "Allow members to sign-in with a WebAuthn passkey": "Allow members to sign-in with a WebAuthn passkey",
   "Restrictions": "Restrictions",
   "by {{ name }}": "by {{ name }}",
   "Last used": "Last used",
@@ -1236,6 +1239,7 @@
   "Require members to be invited to the workspace before they can create an account using SSO.": "Require members to be invited to the workspace before they can create an account using SSO.",
   "Default role": "Default role",
   "The default user role for new accounts. Changing this setting does not affect existing user accounts.": "The default user role for new accounts. Changing this setting does not affect existing user accounts.",
+  "Allow users to sign in with passkeys for passwordless authentication": "Allow users to sign in with passkeys for passwordless authentication",
   "When enabled, documents can be shared publicly on the internet by any member of the workspace": "When enabled, documents can be shared publicly on the internet by any member of the workspace",
   "Viewer document exports": "Viewer document exports",
   "When enabled, viewers can see download options for documents": "When enabled, viewers can see download options for documents",
@@ -1374,6 +1378,26 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "An ID that uniquely identifies the website in your Matomo instance.",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?",
   "Import pages from Notion": "Import pages from Notion",
+  "Please enter a name for this passkey": "Please enter a name for this passkey",
+  "Passkey renamed successfully": "Passkey renamed successfully",
+  "Failed to rename passkey. Please try again.": "Failed to rename passkey. Please try again.",
+  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
+  "Enter passkey name": "Enter passkey name",
+  "Failed to load passkeys": "Failed to load passkeys",
+  "Passkey added successfully": "Passkey added successfully",
+  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
+  "Rename passkey": "Rename passkey",
+  "Delete passkey": "Delete passkey",
+  "Passkey deleted successfully": "Passkey deleted successfully",
+  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
+  "Your Passkeys": "Your Passkeys",
+  "Passkey": "Passkey",
+  "Registered": "Registered",
+  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
+  "Registering": "Registering",
+  "Add Passkey": "Add Passkey",
   "Add to Slack": "Add to Slack",
   "document published": "document published",
   "document updated": "document updated",
