--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -1391,13 +1391,16 @@
   "Passkey deleted successfully": "Passkey deleted successfully",
   "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
   "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
-  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
-  "Your Passkeys": "Your Passkeys",
-  "Passkey": "Passkey",
-  "Registered": "Registered",
-  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Registering": "Registering",
   "Add Passkey": "Add Passkey",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
+  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
+  "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
+  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
+  "Your Passkeys": "Your Passkeys",
+  "Passkey": "Passkey",
+  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
+  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "Add to Slack",
   "document published": "document published",
   "document updated": "document updated",
