--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -1378,9 +1378,10 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "An ID that uniquely identifies the website in your Matomo instance.",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?",
   "Import pages from Notion": "Import pages from Notion",
-  "Please enter a name for this passkey": "Please enter a name for this passkey",
-  "Passkey renamed successfully": "Passkey renamed successfully",
-  "Failed to rename passkey. Please try again.": "Failed to rename passkey. Please try again.",
+  "Passkey options": "Passkey options",
+  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
+  "Passkey updated": "Passkey updated",
+  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
   "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
   "Enter passkey name": "Enter passkey name",
   "Failed to load passkeys": "Failed to load passkeys",
@@ -1397,9 +1398,6 @@
   "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
   "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
   "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
-  "Your Passkeys": "Your Passkeys",
-  "Passkey": "Passkey",
-  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
   "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "Add to Slack",
   "document published": "document published",
