fix: New Chinese Simplified translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -144,7 +144,7 @@
   "New Application": "新应用",
   "This version of the document was deleted": "此版本的文档已被删除",
   "Link copied": "链接已复制",
-  "Download revision": "Download revision",
+  "Download revision": "下载版本",
   "Dark": "深色模式",
   "Light": "浅色模式",
   "System": "跟随系统",
@@ -267,12 +267,12 @@
   "Uploading": "上传中",
   "Add emoji": "添加表情符号",
   "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
-  "Upload an image": "Upload an image",
-  "Click or drag to replace": "Click or drag to replace",
-  "Drop the image here": "Drop the image here",
-  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "Upload an image": "上传图片",
+  "Click or drag to replace": "单击或拖动以替换",
+  "Drop the image here": "将图像拖放到这里",
+  "Click, drop, or paste an image here": "点击、拖动或粘贴图片到这里",
   "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
-  "Choose a name": "Choose a name",
+  "Choose a name": "选择一个名字",
   "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
   "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "模块加载失败",
